DuoNat/styles/components/menu.css
/* Styles for main menu (to replace button column above) */

.main-menu {
    position: fixed;
    top: 10px;
    right: 10px;
    z-index: 1000;
}
/*
.main-menu button,
.main-menu__dropdown button {
    background-color: rgba(255, 255, 255, 0.6);
    border: none;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-bottom: 10px;
}

.main-menu button:hover,
.main-menu__dropdown button:hover {
    background-color: rgba(255, 255, 255, 0.8);
    transform: scale(1.1);
}
*/
.main-menu__dropdown {
    display: none;
    position: absolute;
    right: 0;
    top: 40px;
}

.main-menu__dropdown.show {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.main-menu__item {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-bottom: 10px;
}

.main-menu__label {
    display: flex;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.9);
    height: fit-content; /* Adjust height to content */
    padding: 4px 10px;
    border-radius: 15px;
    font-size: 14px;
    margin-right: 10px;
    margin-top: -8px;
    opacity: 0;
    transition: opacity 0.3s ease;
    white-space: nowrap;
}

.main-menu__dropdown.show .main-menu__label {
    opacity: .8;
}

.main-menu__dropdown--top {
    top: 60px;
}

.main-menu__dropdown--bottom {
    position: absolute;
    top: 0; /* Will be set dynamically in JavaScript */
    right: 0;
}

/* Media query for larger screens */
@media (min-width: 768px) {
    .main-menu__dropdown--bottom {
        bottom: auto;
        top: 50px;
        right: 0;
    }
}

